--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1068,6 +1068,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\HKE5VE9A\\Brodribb and Jordan - 2011 - Water supply and demand remain balanced during lea.pdf;C\:\\Users\\Me\\Zotero\\storage\\AJJ38DIX\\j.1469-8137.2011.03795.html}
 }
 
+@article{brumHydrologicalNicheSegregation2019,
+  title = {Hydrological Niche Segregation Defines Forest Structure and Drought Tolerance Strategies in a Seasonal {{Amazon}} Forest},
+  author = {Brum, Mauro and Vadeboncoeur, Matthew A. and Ivanov, Valeriy and Asbjornsen, Heidi and Saleska, Scott and Alves, Luciana F. and Penha, Deliane and Dias, Jadson D. and Aragão, Luiz E. O. C. and Barros, Fernanda and Bittencourt, Paulo and Pereira, Luciano and Oliveira, Rafael S.},
+  date = {2019},
+  journaltitle = {Journal of Ecology},
+  volume = {107},
+  number = {1},
+  pages = {318--333},
+  issn = {1365-2745},
+  doi = {10.1111/1365-2745.13022},
+  url = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/1365-2745.13022},
+  urldate = {2021-08-25},
+  abstract = {The relationship between rooting depth and above-ground hydraulic traits can potentially define drought resistance strategies that are important in determining species distribution and coexistence in seasonal tropical forests, and understanding this is important for predicting the effects of future climate change in these ecosystems. We assessed the rooting depth of 12 dominant tree species (representing c. 42\% of the forest basal area) in a seasonal Amazon forest using the stable isotope ratios (δ18O and δ2H) of water collected from tree xylem and soils from a range of depths. We took advantage of a major ENSO-related drought in 2015/2016 that caused substantial evaporative isotope enrichment in the soil and revealed water use strategies of each species under extreme conditions. We measured the minimum dry season leaf water potential both in a normal year (2014; Ψnon-ENSO) and in an extreme drought year (2015; ΨENSO). Furthermore, we measured xylem hydraulic traits that indicate water potential thresholds trees tolerate without risking hydraulic failure (P50 and P88). We demonstrate that coexisting trees are largely segregated along a single hydrological niche axis defined by root depth differences, access to light and tolerance of low water potential. These differences in rooting depth were strongly related to tree size; diameter at breast height (DBH) explained 72\% of the variation in the δ18Oxylem. Additionally, δ18Oxylem explained 49\% of the variation in P50 and 70\% of P88, with shallow-rooted species more tolerant of low water potentials, while δ18O of xylem water explained 47\% and 77\% of the variation of minimum Ψnon-ENSO and ΨENSO. We propose a new formulation to estimate an effective functional rooting depth, i.e. the likely soil depth from which roots can sustain water uptake for physiological functions, using DBH as predictor of root depth at this site. Based on these estimates, we conclude that rooting depth varies systematically across the most abundant families, genera and species at the Tapajós forest, and that understorey species in particular are limited to shallow rooting depths. Our results support the theory of hydrological niche segregation and its underlying trade-off related to drought resistance, which also affect the dominance structure of trees in this seasonal eastern Amazon forest. Synthesis. Our results support the theory of hydrological niche segregation and demonstrate its underlying trade-off related to drought resistance (access to deep water vs. tolerance of very low water potentials). We found that the single hydrological axis defining water use traits was strongly related to tree size, and infer that periodic extreme droughts influence community composition and the dominance structure of trees in this seasonal eastern Amazon forest.},
+  langid = {english},
+  keywords = {2015 ENSO,Amazon functional diversity,cavitation,embolism resistance,hydraulic traits,root depth,stable isotopes,water potential},
+  annotation = {\_eprint: https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/1365-2745.13022},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\3UXIKJ3G\\Brum et al. - 2019 - Hydrological niche segregation defines forest stru.pdf}
+}
+
 @article{buckleyHumidityLeavesWhy2019,
   title = {The Humidity inside Leaves and Why You Should Care: Implications of Unsaturation of Leaf Intercellular Airspaces},
   shorttitle = {The Humidity inside Leaves and Why You Should Care},
